# hydro

./: .gitignore  .gitmodules  .todorc.json  Cargo.toml  LICENSE  README.md  build.rs  pyproject.toml  requirements.txt
.zed/: settings.json
docs/source/: conf.py  index.rst
docs/source/specification/: grammar.rst
docs/source/specification/declarations/: annotations.rst  classes.rst  functions.rst  import.rst  index.rst  variables.rst
examples/: raylib.hyb  raylib.hyi  test.hy  test.hydro
src/: bool.rs  buildscript.rs  callable.rs  classes.rs  codegen.rs  compile.rs  context.rs  errors.rs  ffi.rs  float.rs  int.rs  main.rs  parser.rs  scope.rs  string.rs  tuple.rs  types.rs  typing.rs  unit.rs  value.rs  vector.rs
src/clib/: builtin.c  runtime.c
src/hydro/: analyzer.py  builders.py  cinclude.py  compiler.py  helpers.py  lang_types.py  loggers.py  main.py  runtime.py  scanner.py  tokens.py
src/hydro/compiler/: compiler.py  interface.py
src/hydro/parser/: interface.py  nodes.py  parser.py  preparser.py  rules.py
templates/: bridge.c.template
