[project]
name = "hydron"
version = "0.1.0"
description = ""
authors = [
    {name = "carsonetb",email = "blackhole243243@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "llvmlite (>=0.46.0,<0.47.0)",
    "black (>=26.1.0,<27.0.0)",
    "pytest (>=9.0.2,<10.0.0)"
]

[tool.poetry]
packages = [{include = "hydron", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
